--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, iure
-      provident vel ullam hic praesentium qui beatae libero reprehenderit magni.
-    </p>
+    <a class="link-arrow" href="#">Learn More</a>
   </body>
 </html>
