--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/normalize.css" />
@@ -14,6 +14,9 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <a class="link-arrow" href="#">Learn More</a>
+    <span class="badge badge--primary">10% Off</span>
+    <span class="badge badge--primary badge--small">Half Off!</span>
+    <span class="badge badge--secondary">Fuck Off</span>
+    <span class="badge badge--secondary badge--small">Buy1Get1</span>
   </body>
 </html>
