Build List Components

--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <span class="badge badge--primary">10% Off</span>
-    <span class="badge badge--primary badge--small">Half Off!</span>
-    <span class="badge badge--secondary">Fuck Off</span>
-    <span class="badge badge--secondary badge--small">Buy1Get1</span>
+    <ul class="list">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
+    <ul class="list list--inline">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
+    <ul class="list list--tick">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
   </body>
 </html>
