Build Icon Component

--- a/index.html
+++ b/index.html
@@ -11,23 +11,14 @@
     />
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/style.css" />
+
     <title>Smithified.com</title>
   </head>
   <body>
-    <ul class="list">
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 3</li>
-    </ul>
-    <ul class="list list--inline">
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 3</li>
-    </ul>
-    <ul class="list list--tick">
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 3</li>
-    </ul>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use href="css/images/icon-sprite-sheet.svg#wordpress"></use>
+      </svg>
+    </span>
   </body>
 </html>
