--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use href="css/images/icon-sprite-sheet.svg#wordpress"></use>
-      </svg>
-    </span>
+    <button class="btn btn--primary">Click Me!</button>
+    <a href="#" class="btn btn--secondary">apply now!</a>
+    <button class="btn btn--accent">Button</button>
+    <br />
+    <br />
+    <br />
+    <button class="btn btn--outline btn--block">button</button>
+    <a href="#" class="btn btn--accent btn--block">anchor</a>
   </body>
 </html>
