Build Input Field Component

--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <button class="btn btn--primary">Click Me!</button>
-    <a href="#" class="btn btn--secondary">apply now!</a>
-    <button class="btn btn--accent">Button</button>
-    <br />
-    <br />
-    <br />
-    <button class="btn btn--outline btn--block">button</button>
-    <a href="#" class="btn btn--accent btn--block">anchor</a>
+    <input class="input" type="text" placeholder="Enter text here..." />
   </body>
 </html>
