Build Input Group Component

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <input class="input" type="text" placeholder="Enter text here..." />
+    <br />
+    <br />
+    <br />
+    <br />
+
+    <div class="input-group">
+      <input class="input" type="text" placeholder="Enter text here..." />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
