--- a/index.html
+++ b/index.html
@@ -15,14 +15,37 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <br />
-    <br />
-    <br />
-    <br />
-
-    <div class="input-group">
-      <input class="input" type="text" placeholder="Enter text here..." />
-      <button class="btn btn--accent">Search</button>
+    <div style="display: inline-block; width: 40rem; padding: 3rem">
+      <div class="card card--primary">
+        <header class="card__header">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </header>
+        <div class="card__body">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            totam quod ab quasi similique quas.
+          </p>
+        </div>
+        <!--card__body-->
+      </div>
+      <!--card__header-->
     </div>
+    <!--temp-container-->
+    <div style="display: inline-block; width: 40rem; padding: 3rem">
+      <div class="card card--secondary">
+        <header class="card__header">
+          <p>Lorem ipsum dolor sit amet.</p>
+        </header>
+        <div class="card__body">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            totam quod ab quasi similique quas.
+          </p>
+        </div>
+        <!--card__body-->
+      </div>
+      <!--card__header-->
+    </div>
+    <!--temp-container-->
   </body>
 </html>
