--- a/index.html
+++ b/index.html
@@ -15,30 +15,22 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <div style="width: 50%; padding: 4rem" class="plan">
-      <div class="plan plan--popular">
-        <div class="card card--primary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--primary badge--small">10% off</span>
-            <span class="plan__description">Easy start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list list--tick">
-              <li class="list__item">Item 1</li>
-              <li class="list__item">Item 2</li>
-              <li class="list__item">Item 3</li>
-            </ul>
-            <button class="btn btn--outline btn--block">click me!</button>
-          </div>
-          <!--^^div.card__body-->
-        </div>
-        <!--^^div.card__header-->
+    <div class="media">
+      <div class="media__image">
+        <img
+          class="icon"
+          src="/css/images/snap.png"
+          alt="Snapshot of landscape icon"
+        />
       </div>
-      <!--^^div.card-->
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
+          praesentium cum delectus est, animi exercitationem excepturi
+          consequatur quae.
+        </p>
+      </div>
     </div>
-    <!--^^div.plan-->
   </body>
 </html>
