Build Quote Component and mass sorting

--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <img
-          class="icon"
-          src="/css/images/snap.png"
-          alt="Snapshot of landscape icon"
-        />
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
-          praesentium cum delectus est, animi exercitationem excepturi
-          consequatur quae.
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote___text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
+        veritatis molestiae dicta velit, laudantium nihil in corrupti molestias
+        accusantium ad?
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use href="css/images/icon-sprite-sheet.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">
+              Cletus Snarwinsmicherakinsder
+            </h3>
+            <p class="quote__company">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
