--- a/index.html
+++ b/index.html
@@ -14,28 +14,40 @@
 
     <title>Smithified.com</title>
   </head>
-  <body>
-    <blockquote class="quote">
-      <p class="quote___text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
-        veritatis molestiae dicta velit, laudantium nihil in corrupti molestias
-        accusantium ad?
-      </p>
-      <footer>
-        <div class="media">
-          <div class="media__image">
-            <svg class="icon icon--primary quote__line">
-              <use href="css/images/icon-sprite-sheet.svg#line"></use>
+  <body style="padding: 4rem">
+    <div class="card testimonial">
+      <div class="grid grid--cols-2">
+        <div class="testimonial__image">
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--small icon--white">
+              <use href="css/images/icon-sprite-sheet.svg#quotes"></use>
             </svg>
-          </div>
-          <div class="media__body">
-            <h3 class="media__title quote__author">
-              Cletus Snarwinsmicherakinsder
-            </h3>
-            <p class="quote__company">ABC Company</p>
-          </div>
+          </span>
+          <img src="/css/images/testimonial.jpg" alt="A satisfied customer" />
         </div>
-      </footer>
-    </blockquote>
+        <blockquote class="quote">
+          <p class="quote___text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
+            veritatis molestiae dicta velit, laudantium nihil in corrupti
+            molestias accusantium ad?
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use href="css/images/icon-sprite-sheet.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title quote__author">
+                  Cletus Snarwinsmicherakinsder
+                </h3>
+                <p class="quote__company">ABC Company</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
   </body>
 </html>
