Build Callout Component

--- a/index.html
+++ b/index.html
@@ -14,39 +14,18 @@
 
     <title>Smithified.com</title>
   </head>
-  <body style="padding: 4rem">
-    <div class="card testimonial">
+  <body>
+    <div class="callout callout--primary">
       <div class="grid grid--cols-2">
-        <div class="testimonial__image">
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--small icon--white">
-              <use href="css/images/icon-sprite-sheet.svg#quotes"></use>
-            </svg>
-          </span>
-          <img src="/css/images/testimonial.jpg" alt="A satisfied customer" />
-        </div>
-        <blockquote class="quote">
-          <p class="quote___text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            veritatis molestiae dicta velit, laudantium nihil in corrupti
-            molestias accusantium ad?
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente
+            natus odio vero maiores doloremque molestiae rerum porro totam.
+            Excepturi, culpa.
           </p>
-          <footer>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary quote__line">
-                  <use href="css/images/icon-sprite-sheet.svg#line"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">
-                  Cletus Snarwinsmicherakinsder
-                </h3>
-                <p class="quote__company">ABC Company</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+        </div>
+        <a href="" class="btn btn--stretched btn--secondary">Get Started!</a>
       </div>
     </div>
   </body>
