Build Collapsible Component

--- a/index.html
+++ b/index.html
@@ -15,18 +15,101 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--cols-2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente
-            natus odio vero maiores doloremque molestiae rerum porro totam.
-            Excepturi, culpa.
-          </p>
-        </div>
-        <a href="" class="btn btn--stretched btn--secondary">Get Started!</a>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item</h2>
+        <img
+          class="icon collapsible__chevron"
+          src="/css/images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li class="list__item">Item1</li>
+          <li class="list__item">Item2</li>
+          <li class="list__item">Item3</li>
+          <li class="list__item">Item4</li>
+        </ul>
       </div>
     </div>
+
+    <!--  Stacked Collapsibles  -->
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item</h2>
+        <img
+          class="icon collapsible__chevron"
+          src="/css/images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li class="list__item">Item1</li>
+          <li class="list__item">Item2</li>
+          <li class="list__item">Item3</li>
+          <li class="list__item">Item4</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item</h2>
+        <img
+          class="icon collapsible__chevron"
+          src="/css/images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li class="list__item">Item1</li>
+          <li class="list__item">Item2</li>
+          <li class="list__item">Item3</li>
+          <li class="list__item">Item4</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item</h2>
+        <img
+          class="icon collapsible__chevron"
+          src="/css/images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li class="list__item">Item1</li>
+          <li class="list__item">Item2</li>
+          <li class="list__item">Item3</li>
+          <li class="list__item">Item4</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item</h2>
+        <img
+          class="icon collapsible__chevron"
+          src="/css/images/chevron.svg"
+          alt=""
+        />
+      </header>
+      <div class="collapsible__content">
+        <ul class="list">
+          <li class="list__item">Item1</li>
+          <li class="list__item">Item2</li>
+          <li class="list__item">Item3</li>
+          <li class="list__item">Item4</li>
+        </ul>
+      </div>
+    </div>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
