--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
         <header class="site-block__header hero__content">
           <h1 class="site-block__heading">Cloud Hosting for Pros</h1>
           <p class="hero__tagline">Deploy your website in less than 5 mins.</p>
-          <button class="btn btn--accent btn--stretched">Get Started</button>
+          <a class="btn btn--accent btn--stretched">Get Started</a>
         </header>
         <div>
-          <img class="hero__img" src="/css/images/banner.png" alt="" />
+          <picture>
+            <source
+              type="img/webp"
+              srcset="
+                /css/images/banner/new/webp/banner@1x.webp 1x,
+                /css/images/banner/new/webp/banner@2x.webp 2x
+              "
+            />
+            <source
+              type="img/png"
+              srcset="
+                /css/images/banner/new/png/banner@1x.png 1x,
+                /css/images/banner/new/png/banner@2x.png 2x
+              "
+            />
+            <img class="hero__img" src="/css/images/banner/banner.png" alt="" />
+          </picture>
         </div>
       </div>
     </section>
