--- a/index.html
+++ b/index.html
@@ -15,34 +15,31 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <section class="site-block site-block--dark site-block--skew-left hero">
-      <div class="grid grid--cols-2 container">
-        <header class="site-block__header hero__content">
-          <h1 class="site-block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">Deploy your website in less than 5 mins.</p>
-          <a class="btn btn--accent btn--stretched">Get Started</a>
-        </header>
-        <div>
-          <picture>
-            <source
-              type="img/webp"
-              srcset="
-                /css/images/banner/new/webp/banner@1x.webp 1x,
-                /css/images/banner/new/webp/banner@2x.webp 2x
-              "
-            />
-            <source
-              type="img/png"
-              srcset="
-                /css/images/banner/new/png/banner@1x.png 1x,
-                /css/images/banner/new/png/banner@2x.png 2x
-              "
-            />
-            <img class="hero__img" src="/css/images/banner/banner.png" alt="" />
-          </picture>
-        </div>
+    <section class="site-block block__domain container">
+      <header class="site-block__header">
+        <h2>Start with only $10!</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, sint.
+        </p>
+      </header>
+      <div class="input-group">
+        <input class="input" type="text" placeholder="Enter text here..." />
+        <button class="btn btn--accent">
+          <svg class="icon icon--white">
+            <use href="css/images/icon-sprite-sheet.svg#search"></use></svg
+          >Search
+        </button>
       </div>
+      <ul class="list block__domain__prices">
+        <li>lk</li>
+        <li>kjnlk</li>
+        <li>
+          <span class="badge badge--secondary">lmnl</span>
+        </li>
+        <li>jbk.</li>
+        <li>kmop</li>
+        <li>kjoi</li>
+      </ul>
     </section>
-    <script src="/javascript/main.js"></script>
   </body>
 </html>
