Build Plans Block

--- a/index.html
+++ b/index.html
@@ -15,31 +15,77 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <section class="site-block block__domain container">
-      <header class="site-block__header">
-        <h2>Start with only $10!</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, sint.
-        </p>
-      </header>
-      <div class="input-group">
-        <input class="input" type="text" placeholder="Enter text here..." />
-        <button class="btn btn--accent">
-          <svg class="icon icon--white">
-            <use href="css/images/icon-sprite-sheet.svg#search"></use></svg
-          >Search
-        </button>
+    <section class="block container block__plans">
+      <div class="grid grid--cols-3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% off</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Item 1</li>
+                <li class="list__item">Item 2</li>
+                <li class="list__item">Item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">click me!</button>
+            </div>
+            <!--^^div.card__body-->
+          </div>
+          <!--^^div.card-->
+        </div>
+        <!--^^div.plan-->
+
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--primary badge--small">10% off</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Item 1</li>
+                <li class="list__item">Item 2</li>
+                <li class="list__item">Item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">click me!</button>
+            </div>
+            <!--^^div.card__body-->
+          </div>
+          <!--^^div.card-->
+        </div>
+        <!--^^div.plan-->
+
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% off</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Item 1</li>
+                <li class="list__item">Item 2</li>
+                <li class="list__item">Item 3</li>
+              </ul>
+              <button class="btn btn--outline btn--block">click me!</button>
+            </div>
+            <!--^^div.card__body-->
+          </div>
+          <!--^^div.card-->
+        </div>
+        <!--^^div.plan-->
       </div>
-      <ul class="list block__domain__prices">
-        <li>lk</li>
-        <li>kjnlk</li>
-        <li>
-          <span class="badge badge--secondary">lmnl</span>
-        </li>
-        <li>jbk.</li>
-        <li>kmop</li>
-        <li>kjoi</li>
-      </ul>
     </section>
   </body>
 </html>
