Build Features Block

--- a/index.html
+++ b/index.html
@@ -15,77 +15,103 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <section class="block container block__plans">
-      <div class="grid grid--cols-3">
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% off</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Item 1</li>
-                <li class="list__item">Item 2</li>
-                <li class="list__item">Item 3</li>
-              </ul>
-              <button class="btn btn--outline btn--block">click me!</button>
-            </div>
-            <!--^^div.card__body-->
-          </div>
-          <!--^^div.card-->
-        </div>
-        <!--^^div.plan-->
-
-        <div class="plan plan--popular">
-          <div class="card card--primary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--primary badge--small">10% off</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Item 1</li>
-                <li class="list__item">Item 2</li>
-                <li class="list__item">Item 3</li>
-              </ul>
-              <button class="btn btn--outline btn--block">click me!</button>
-            </div>
-            <!--^^div.card__body-->
-          </div>
-          <!--^^div.card-->
-        </div>
-        <!--^^div.plan-->
-
-        <div class="plan">
-          <div class="card card--secondary">
-            <header class="card__header">
-              <h3 class="plan__name">Entry</h3>
-              <span class="plan__price">$14</span>
-              <span class="plan__billing-cycle">/month</span>
-              <span class="badge badge--secondary badge--small">10% off</span>
-              <span class="plan__description">Easy start on the cloud</span>
-            </header>
-            <div class="card__body">
-              <ul class="list list--tick">
-                <li class="list__item">Item 1</li>
-                <li class="list__item">Item 2</li>
-                <li class="list__item">Item 3</li>
-              </ul>
-              <button class="btn btn--outline btn--block">click me!</button>
-            </div>
-            <!--^^div.card__body-->
-          </div>
-          <!--^^div.card-->
-        </div>
-        <!--^^div.plan-->
+    <article class="grid grid--cols-2 feature">
+      <div class="feature__content">
+        <span class="icon-container">
+          <svg class="icon icon--primary">
+            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
+          </svg>
+        </span>
+        <h3 class="feature__heading">Simplify Your Work Process</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
+          aspernatur?
+        </p>
+        <a href="/" class="link--arrow">how it works</a>
       </div>
-    </section>
+      <picture>
+        <source
+          type="image/webp"
+          srcset="
+            /css/images/easy/new/webp/easy@1x.webp 1x,
+            /css/images/easy/new/webp/easy@2x.webp 2x
+          "
+        />
+        <source
+          type="image/png"
+          srcset="
+            /css/images/easy/new/png/easy@1x.jpg 1x,
+            /css/images/easy/new/png/easy@2x.jpg 2x
+          "
+        />
+        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
+      </picture>
+    </article>
+
+    <article class="grid grid--cols-2 feature">
+      <div class="feature__content">
+        <span class="icon-container">
+          <svg class="icon icon--primary">
+            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
+          </svg>
+        </span>
+        <h3 class="feature__heading">Simplify Your Work Process</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
+          aspernatur?
+        </p>
+        <a href="/" class="link--arrow">how it works</a>
+      </div>
+      <picture>
+        <source
+          type="image/webp"
+          srcset="
+            /css/images/easy/new/webp/easy@1x.webp 1x,
+            /css/images/easy/new/webp/easy@2x.webp 2x
+          "
+        />
+        <source
+          type="image/png"
+          srcset="
+            /css/images/easy/new/png/easy@1x.jpg 1x,
+            /css/images/easy/new/png/easy@2x.jpg 2x
+          "
+        />
+        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
+      </picture>
+    </article>
+
+    <article class="grid grid--cols-2 feature">
+      <div class="feature__content">
+        <span class="icon-container">
+          <svg class="icon icon--primary">
+            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
+          </svg>
+        </span>
+        <h3 class="feature__heading">Simplify Your Work Process</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
+          aspernatur?
+        </p>
+        <a href="/" class="link--arrow">how it works</a>
+      </div>
+      <picture>
+        <source
+          type="image/webp"
+          srcset="
+            /css/images/easy/new/webp/easy@1x.webp 1x,
+            /css/images/easy/new/webp/easy@2x.webp 2x
+          "
+        />
+        <source
+          type="image/png"
+          srcset="
+            /css/images/easy/new/png/easy@1x.jpg 1x,
+            /css/images/easy/new/png/easy@2x.jpg 2x
+          "
+        />
+        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
+      </picture>
+    </article>
   </body>
 </html>
