Build Showcase Block

--- a/index.html
+++ b/index.html
@@ -15,103 +15,83 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <article class="grid grid--cols-2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Simplify Your Work Process</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
-          aspernatur?
-        </p>
-        <a href="/" class="link--arrow">how it works</a>
-      </div>
-      <picture>
-        <source
-          type="image/webp"
-          srcset="
-            /css/images/easy/new/webp/easy@1x.webp 1x,
-            /css/images/easy/new/webp/easy@2x.webp 2x
-          "
-        />
-        <source
-          type="image/png"
-          srcset="
-            /css/images/easy/new/png/easy@1x.jpg 1x,
-            /css/images/easy/new/png/easy@2x.jpg 2x
-          "
-        />
-        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
-      </picture>
-    </article>
+    <section
+      class="site-block site-block--dark site-block--skew-right block__showcase"
+    >
+      <header class="site-block__header">
+        <h2 class="site-block__heading">User Friendly Interface</h2>
+      </header>
+      <div class="container grid grid--cols-2">
+        <picture class="block__showcase__image">
+          <source
+            type="image/webp"
+            srcset="
+              /css/images/ipad/new/webp/ipad@1x.webp 1x,
+              /css/images/ipad/new/webp/ipad@2x.webp 2x
+            "
+          />
+          <source
+            type="image/png"
+            srcset="
+              /css/images/ipad/new/png/ipad@1x.png 1x,
+              /css/images/ipad/new/png/ipad@2x.png 2x
+            "
+          />
 
-    <article class="grid grid--cols-2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Simplify Your Work Process</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
-          aspernatur?
-        </p>
-        <a href="/" class="link--arrow">how it works</a>
+          <img src="/css/images/ipad/new/png/ipad@2x.png" alt="" />
+        </picture>
+        <ul class="list">
+          <li class="list-item">
+            <div class="media">
+              <div class="media__image">
+                <img src="/css/images/snap.png" alt="" class="icon" />
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                  magni praesentium cum delectus est, animi exercitationem
+                  excepturi consequatur quae.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li class="list-item">
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="css/images/icon-sprite-sheet.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                  magni praesentium cum delectus est, animi exercitationem
+                  excepturi consequatur quae.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li class="list-item">
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use href="css/images/icon-sprite-sheet.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching & More</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                  magni praesentium cum delectus est, animi exercitationem
+                  excepturi consequatur quae.
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
-      <picture>
-        <source
-          type="image/webp"
-          srcset="
-            /css/images/easy/new/webp/easy@1x.webp 1x,
-            /css/images/easy/new/webp/easy@2x.webp 2x
-          "
-        />
-        <source
-          type="image/png"
-          srcset="
-            /css/images/easy/new/png/easy@1x.jpg 1x,
-            /css/images/easy/new/png/easy@2x.jpg 2x
-          "
-        />
-        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
-      </picture>
-    </article>
-
-    <article class="grid grid--cols-2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use href="css/images/icon-sprite-sheet.svg#easy"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Simplify Your Work Process</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti,
-          aspernatur?
-        </p>
-        <a href="/" class="link--arrow">how it works</a>
-      </div>
-      <picture>
-        <source
-          type="image/webp"
-          srcset="
-            /css/images/easy/new/webp/easy@1x.webp 1x,
-            /css/images/easy/new/webp/easy@2x.webp 2x
-          "
-        />
-        <source
-          type="image/png"
-          srcset="
-            /css/images/easy/new/png/easy@1x.jpg 1x,
-            /css/images/easy/new/png/easy@2x.jpg 2x
-          "
-        />
-        <img class="feature__image" src="/css/images/easy/easy.jpg" alt="" />
-      </picture>
-    </article>
+    </section>
   </body>
 </html>
